* make the LDAP probe 'scope' option actually work. -- niko
* some touchups to the graph comments to be a bit less 'ping' focussed -- tobi
* configuration option mailtemplate lets you configure the alert message content -- tobi
* added new method ProbeUnit to base.pm in support of FTPtransfer.pm -- tobi
* new probe FTPtransfer.pm added. It measures available bandwidth by
  actually sending data over the wire to test (don't try this at home) -- tobi
* make sure logo images get writen in binary mode or they will not be usable on windows -- tobi
* make PERL binary configurable in Makefile -- tobi
* fixed echoping test call to be compatible with echoping 6 -- tobi
* create a log entry when there are zero replies from a device. -- tobi
* maintaining trunk and branch is not realy sensible the way smokeping evolves. 
  I have merged everything back to trunk -- tobi
* Allow several Mailservers to be specified in Mailhost -- tobi
* Reduce timeout for Net::SMTP to 5 seconds. -- tobi
* new feature to color the graph background in sync with the loss -- grahame.bo
* new probe JunOS Telnet ping -- Shan Ali Khan shanali *singtel.com

2006/07/14 -- released version 2.0.9

* added matchers CheckLatency and CheckLoss -- tobi, from Dylan Vanderhoof DylanV semaphore.com
* added TacacsPlus probe -- tobi, from Gary.Mikula * nasd.com
* pass 'prevmatch' to alert matcher plugins.
  -- niko, from Dylan Vanderhoof <DylanV *semaphore.com>
* fix subject in tSmoke 'morning' emails.  --niko, 
   from Jean-Philippe Luiggi <Jean-Philippe.Luiggi *revolutionlinux.com>
* AnotherDNS.pm: added option 'require_answers' for testing
  recursive DNS servers. -- niko
* fixed loss_color documentation (this is not in percent) -- tobi
* brought back the FPing.pm 'timeout' parameter, since it does something
   after all. -- niko, requested by Peter Klausner <peter.klausner *gmail.com>
* fix running an external program on edge-triggered alerts.
  -- niko, from Peter Klausner <peter.klausner *gmail.com>
